--- a/.github/workflows/dummy-saml-test-dev.yml
+++ b/.github/workflows/dummy-saml-test-dev.yml
@@ -2,31 +2,21 @@ name: Build and deploy .NET Core application to Web App dummy-saml-test-dev
 on:
   push:
     branches:
-    - master
+      - master
 env:
   AZURE_WEBAPP_NAME: dummy-saml-test-dev
   AZURE_WEBAPP_PACKAGE_PATH: .\published
   CONFIGURATION: Release
-  DOTNET_CORE_VERSION: 5.0.x
   WORKING_DIRECTORY: .
 jobs:
   build:
     runs-on: windows-latest
     steps:
     - uses: actions/checkout@v3
-    - name: Setup .NET SDK
-      uses: actions/setup-dotnet@v1.8.0
-      with:
-        include-prerelease: True
-        dotnet-version: ${{ env.DOTNET_CORE_VERSION }}
     - name: Restore
       run: dotnet restore "${{ env.WORKING_DIRECTORY }}"
-    - name: Build
-      run: dotnet build "${{ env.WORKING_DIRECTORY }}" --configuration ${{ env.CONFIGURATION }} --no-restore
-    - name: Test
-      run: dotnet test "${{ env.WORKING_DIRECTORY }}" --no-build
-    - name: Publish
-      run: dotnet publish "${{ env.WORKING_DIRECTORY }}" --configuration ${{ env.CONFIGURATION }} --no-build --output "${{ env.AZURE_WEBAPP_PACKAGE_PATH }}"
+    - name: Build (Self-Contained)
+      run: dotnet publish "${{ env.WORKING_DIRECTORY }}" --configuration ${{ env.CONFIGURATION }} --no-build --no-restore --output "${{ env.AZURE_WEBAPP_PACKAGE_PATH }}"
     - name: Publish Artifacts
       uses: actions/upload-artifact@v3
       with:
@@ -41,7 +31,7 @@ jobs:
       with:
         name: webapp
         path: ${{ env.AZURE_WEBAPP_PACKAGE_PATH }}
-    - name: Deploy to Azure WebApp
+    - name: Deploy to Azure Web App
       uses: azure/webapps-deploy@v2
       with:
         app-name: ${{ env.AZURE_WEBAPP_NAME }}
