--- a/SAMLTEST.csproj
+++ b/SAMLTEST.csproj
@@ -6,6 +6,7 @@
     <RepositoryUrl>https://github.com/</RepositoryUrl>
     <RepositoryType>GitHub</RepositoryType>
     <UserSecretsId>39ec726f-b878-4431-bb2a-c02b66a55583</UserSecretsId>
+    <PlatformTarget>x64</PlatformTarget>
   </PropertyGroup>
   <ItemGroup>
     <None Remove="B2CPolicyTemplate.xml" />
