--- a/SAMLTEST.csproj
+++ b/SAMLTEST.csproj
@@ -1,6 +1,6 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
   <PropertyGroup>
-    <TargetFramework>netcoreapp2.0</TargetFramework>
+    <TargetFramework>net7.0</TargetFramework>
     <Description>A simple DotNet Core2 SAML Identity / Service Provider for B2C Training or Testing purposes only</Description>
     <PackageTags>SAML</PackageTags>
     <RepositoryUrl>https://github.com/</RepositoryUrl>
@@ -10,11 +10,6 @@
   </PropertyGroup>
   <ItemGroup>
     <None Remove="B2CPolicyTemplate.xml" />
-  </ItemGroup>
-  <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.9" />
-    <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.ViewCompilation" Version="2.2.0" />
-    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.0.3" />
   </ItemGroup>
   <ItemGroup>
     <DotNetCliToolReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Tools" Version="2.0.0" />
